2005-06-09  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/Makefile.am:
  - "clean" target didn't erase reference-stamp/tutorial-stamp
  - Scratch code to remove any pre-existing "html" file (why was that there?)
  - Create Reference and Tutorial subdirectories if they don't exist
2005-06-08  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in, include/pqxx/connection_base.hxx, include/pqxx/pipeline.hxx,
 test/test000.cxx, test/test014.cxx:
  - Work around -Wctor-dtor-privacy bug in Debian's gcc 4.0
2005-06-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - More, much more work on that stupid grep command line; works again
  - Fixed progress message for NAN C macro
 include/pqxx/libcompiler.h:
  - Replaced "!defined(_LIB)" with "defined(_DLL)", thanks gzh
 include/pqxx/util.hxx:
  - Added warning about thread-safety of PQAlloc usage
 tools/makevcmake.pl:
  - Removed _USRDLL definition, thanks gzh
2005-05-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Skip "outer grep" in generating config files if result is empty
  - Should fix endless-loop problem in grep with Fedora Core 4
2005-05-20  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/binarystring.cxx:
  - Bugfix in workaround for missing PQunescapeBytea()
2005-05-19  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configitems, src/largeobject.cxx:
  - Prepared for optimization in case seek parameters match C-style values
 include/pqxx/largeobject.hxx, include/pqxx/result.hxx:
  - Stream c'tors relied on GNU implementation--thanks German Zhivotnikov!
  - Removed broken checks in lostreams, thanks again German Zhivotnikov
2005-05-17  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/tablewriter.hxx, src/tablewriter.cxx:
  - Replaced generate() loop with use of separated_list()
  - Restructured escaping functions
2005-05-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Check for stlp_std (stlport) namespace, let it override std
 win32/INSTALL.txt: