@@ -1,5 +1,6 @@
 ALERT
 (*) Connection restoration will lose any temp tables!
+(*) On MinGW, --enable-shared should define _DLL
 (*) test062 fails on binary strings with postgres 8.0.2 (RedHat, John Carpenter)
 (*) test085 fails with postgres 8.0.2 (Fedora, John Carpenter)
 (*) Breaks against postgres 7.1 (niejam@yahoo.com)
