@@ -121,6 +121,17 @@ template<> struct char_traits<unsigned char>
 // Workarounds for Windows
 #ifdef _WIN32
 
+
+/* For now, export DLL symbols if _DLL is defined.  This is done automatically
+ * by the compiler when linking to the dynamic version of the runtime library,
+ * according to "gzh"
+ */
+// TODO: Define custom macro to govern how libpqxx will be linked to client
+#if !defined(PQXX_LIBEXPORT) && defined(_DLL)
+#define PQXX_LIBEXPORT __declspec(dllimport)
+#endif	// PQXX_LIBEXPORT _LIB
+
+
 // Workarounds for Microsoft Visual C++
 #ifdef _MSC_VER
 
@@ -138,15 +149,6 @@ template<> struct char_traits<unsigned char>
 #pragma warning (disable: 4786)
 #pragma warning (disable: 4251 4275 4273)
 #pragma comment(lib, "libpqdll")
-
-/* For now, export DLL symbols if _DLL is defined.  This is done automatically
- * by the compiler when linking to the dynamic version of the runtime library,
- * according to "gzh"
- */
-// TODO: Define custom macro to govern how libpqxx will be linked to client
-#if !defined(PQXX_LIBEXPORT) && defined(_DLL)
-#define PQXX_LIBEXPORT __declspec(dllimport)
-#endif	// PQXX_LIBEXPORT _LIB
 
 /// Apparently Visual C++.NET 2003 breaks on stdout/stderr output in destructors
 /** Defining this macro will disable all error or warning messages whenever a
